test/corpus/attr_quoted_multiline.txt
=====================
Multiline quoted attr
=====================

span title="example example
   example

   example {"example"{1}}
   example" lang="en"

---

(source_file
  (element
    (tag_name)
    (attrs
      (attr
        (attr_name)
        (attr_assignment)
        (attr_value))
      (attr
        (attr_name)
        (attr_assignment)
        (attr_value)))))
