test/corpus/attributes_ruby.txt
===============
Ruby attributes
===============

span title=generate_title("example title") data = { a: 10, b: [20, 30] }

---

(source_file
  (element
    (tag_name)
    (attrs
      (attr (attr_name) (attr_assignment) (attr_value))
      (attr (attr_name) (attr_assignment) (attr_value)))))
