test/corpus/attributes_ruby_delimited.txt
===========================
Ruby attributes - delimited
===========================

span(title = Title::Generator.generate(type: :simple) data-visible = "yes")

---

(source_file
  (element
    (tag_name)
    (attrs
      (attr (attr_name) (attr_assignment) (attr_value))
      (attr (attr_name) (attr_assignment) (attr_value)))))
