test/corpus/attributes_ruby_delimited_end_with_delimiter.txt
=================================================
Ruby attributes - delimited - ends with delimiter
=================================================

span[title=make_title]

---

(source_file
  (element
    (tag_name)
    (attrs
      (attr (attr_name) (attr_assignment) (attr_value)))))
