test/corpus/attributes_ruby_multiline.txt
===========================
Ruby attributes - multiline
===========================

span title=make_title(style: :standard,
  prefix: "First page -" \
          " my site")

---

(source_file
  (element
    (tag_name)
    (attrs
      (attr (attr_name) (attr_assignment) (attr_value)))))
