test/corpus/element_nesting.txt
===============
Element nesting
===============

.foo
  .bar
  .baz
.quux

---

(source_file
  (element
    attr_shortcuts: (attr_shortcuts (shortcut_class (css_identifier)))
    children: (nested
      (element
        attr_shortcuts: (attr_shortcuts (shortcut_class (css_identifier))))
      (element
        attr_shortcuts: (attr_shortcuts (shortcut_class (css_identifier))))))
  (element
    attr_shortcuts: (attr_shortcuts (shortcut_class (css_identifier)))))
