test/corpus/element_nesting_with_empty_lines.txt
================================
Element nesting with empty lines
================================

p

  b

---

(source_file
  (element
    (tag_name)
    (nested
      (element
        (tag_name)))))
