test/corpus/html_conditional_comment.txt
========================
HTML conditional comment
========================

/[if IE]
  p

---

(source_file
  (html_comment_conditional
    (html_comment_condition)
    (nested
      (element
        (tag_name)))))
