test/corpus/inline_closed_tag_with_attributes.txt
=================================
Inline closed tag with attributes
=================================

p title=example /

---

(source_file
  (element
    (tag_name)
    (attrs
      (attr
        (attr_name)
        (attr_assignment)
        (attr_value)))))
