test/corpus/inline_expansion_embedded_engine.txt
==================================
Inline expansion - embedded engine
==================================

p: javascript:
  alert("Example");

---

(source_file
  (element
    (tag_name)
    (nested_inline
      (embedded_engine))))
