test/corpus/inline_expansion_tag.txt
======================
Inline expansion - tag
======================

p: b Example

---

(source_file
  (element
    (tag_name)
    (nested_inline
      (element
        (tag_name)
        (element_text)))))
