test/corpus/ruby_block_nested.txt
=============================
Ruby block with nested blocks
=============================

- unless valid?
  .error
    = error_message

---

(source_file
  (ruby_block_control
    (ruby)
    (nested
      (element
        (attr_shortcuts
          (shortcut_class (css_identifier)))
        (nested
          (ruby_block_output
            (ruby)))))))
