test/corpus/tags.txt
============================
Tag and shortcut css classes
============================

span.menu.active

---

(source_file
  (element
    (tag_name)
    (attr_shortcuts
      (attr_shortcut_class
        (css_identifier))
      (attr_shortcut_class
        (css_identifier)))))

===============================
Tag with traling space modifier
===============================

.menu<

---

(source_file
  (element
    (attr_shortcuts
      (attr_shortcut_class
        (css_identifier)))
    (output_modifier_leading_whitespace)))

============================================
Tag with space before traling space modifier
============================================

.menu <

---

(source_file
  (element
    (attr_shortcuts
      (attr_shortcut_class
        (css_identifier)))
    (element_text)))

=====================================================
Trailing space modifier with non-delimited attributes
=====================================================

a< title="example"

----

(source_file
  (element
    (tag_name)
    (output_modifier_leading_whitespace)
    (attrs
      (attr
        (attr_name)
        (attr_assignment)
        (attr_value)))))

===============================================================
Trailing space modifier with delimited attributes without space
===============================================================

a<[title="example"]

----

(source_file
  (element
    (tag_name)
    (output_modifier_leading_whitespace)
    (attrs
      (attr
        (attr_name)
        (attr_assignment)
        (attr_value)))))

=============================
Extension attribute shortcuts
=============================

span.example@@example*example

---

(source_file
  (element
    (tag_name)
    (attr_shortcuts
      (attr_shortcut_class
        (css_identifier))
      (attr_shortcut_custom)
      (attr_shortcut_custom))))
