test/corpus/verbatim_text_trailing_space.txt
=================================
Verbatim text with trailing space
=================================

' Example text

---

(source_file
  (verbatim_text
    (verbatim_text_modifier_trailing_whitespace)))
